<resources>
    <string name="app_name" translatable="false">Weatherly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weatherly</string>
    <string name="nav_header_subtitle">Weather forecast</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="today_label">Today</string>
    <string name="week_label">7-Day Forecasts</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind Speed</string>
    <string name="cloud_label">Clouds</string>
    <string name="pressure_label">Pressure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="temperature_tv">%.2f %s</string>
    <string name="humidity_tv">%d%s</string>
    <string name="pressure_tv">%d %s</string>
    <string name="windSpeed_tv">%.2f %s</string>
    <string name="cloud_tv">%d%s</string>
    <string name="menu_alert">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="wind_speed_option">Wind Speed</string>
    <string name="settings_header">Settings</string>
    <string name="temperature_options">Temperature</string>
    <string name="kelvin_option">Kelvin</string>
    <string name="celsius_option">Celsius</string>
    <string name="fahrenheit_option">Fahrenheit</string>
    <string name="miles_option">Miles/hour</string>
    <string name="meter_option">Meter/sec</string>
    <string name="languages_options">Languages</string>
    <string name="arabic_option">Arabic</string>
    <string name="english_option">English</string>
    <string name="location_options">Location</string>
    <string name="gps_option">GPS</string>
    <string name="map_option">Map</string>
    <string name="week_fragment_label">Week Forecast</string>
    <string name="filed_text">Couldn\'t download weather data, please check your network connectivity</string>
    <string name="stored_label">Stored Locations</string>
    <string name="menu_stored_locations">Saved</string>
</resources>