<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherly.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_weekFragment"
            app:destination="@id/weekFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.weatherly.ui.alert.AlertFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_alert" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherly.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/weekFragment"
        android:name="com.example.weatherly.ui.week.WeekFragment"
        android:label="@string/week_fragment_label"
        tools:layout="@layout/fragment_week" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherly.ui.map.MapsFragment"
        android:label="MapsFragment" />
    <fragment
        android:id="@+id/nav_locations"
        android:name="com.example.weatherly.ui.stored_locations.StoredLocationsFragment"
        android:label="fragment_stored_locations"
        tools:layout="@layout/fragment_stored_locations" >
        <action
            android:id="@+id/action_storedLocations_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_nav_locations_to_locationDetailsFragment"
            app:destination="@id/locationDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationDetailsFragment"
        android:name="com.example.weatherly.ui.location_details.LocationDetailsFragment"
        android:label="fragment_location_details"
        tools:layout="@layout/fragment_location_details" >
        <argument
            android:name="weatherLocation"
            app:argType="com.example.weatherly.model.WeatherModel" />
    </fragment>
</navigation>