<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        tools:context=".ui.settings.SettingsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/settings_header"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="#FFC2C2ED"
                    app:cardElevation="20dp">

                    <TextView
                        android:id="@+id/wind_speed_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/wind_speed_option"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#1F1B24">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/windSpeed_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioButton
                                android:id="@+id/miles_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="30dp"
                                android:text="@string/miles_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/meter_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/meter_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </RadioGroup>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="#FFC2C2ED"
                    app:cardElevation="20dp">

                    <TextView
                        android:id="@+id/temperature_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/temperature_options"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#1F1B24">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/temp_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioButton
                                android:id="@+id/kelvin_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="30dp"
                                android:text="@string/kelvin_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/celsius_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="30dp"
                                android:text="@string/celsius_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/fahrenheit_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fahrenheit_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </RadioGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="#FFC2C2ED"
                    app:cardElevation="20dp">

                    <TextView
                        android:id="@+id/languages_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/languages_options"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#1F1B24">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/lang_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioButton
                                android:id="@+id/arabic_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginEnd="90dp"
                                android:text="@string/arabic_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/english_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/english_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </RadioGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="#FFC2C2ED">

                    <TextView
                        android:id="@+id/location_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/location_options"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#1F1B24">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/location_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioButton
                                android:id="@+id/map_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="90dp"
                                android:text="@string/map_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/gps_rb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gps_option"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </RadioGroup>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>