<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5945A5"
    tools:context=".ui.week.WeekFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/weekFrag_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="@string/week_label"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="303dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#331C71"
                app:cardCornerRadius="25dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/weather_icon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="28dp"
                        android:src="@drawable/test_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/stored_date_tv" />

                    <TextView
                        android:id="@+id/temperature_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="33dp"
                        android:layout_marginTop="38dp"
                        android:text="23 \u2103"
                        android:textColor="@color/white"
                        android:textSize="60sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/weather_icon2"
                        app:layout_constraintTop_toBottomOf="@+id/stored_time_tv" />

                    <TextView
                        android:id="@+id/stored_loc_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Chicago,America"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/stored_desc_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:text="Mostly Sunny"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/stored_loc_tv"
                        app:layout_constraintStart_toStartOf="@+id/stored_loc_tv"
                        app:layout_constraintTop_toBottomOf="@+id/stored_loc_tv" />

                    <TextView
                        android:id="@+id/stored_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="40dp"
                        android:text="Staurday, 10 February "
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/stored_desc_tv" />

                    <TextView
                        android:id="@+id/stored_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="94dp"
                        android:text="10:00"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/stored_date_tv"
                        app:layout_constraintStart_toEndOf="@+id/stored_date_tv"
                        app:layout_constraintTop_toTopOf="@+id/stored_date_tv" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="367dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#331C71"
                app:cardCornerRadius="25dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/humidity_icon"
                        android:layout_width="65dp"
                        android:layout_height="52dp"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="48dp"
                        android:src="@drawable/humidity"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/humidity_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="30%"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/humidity_icon"
                        app:layout_constraintHorizontal_bias="0.589"
                        app:layout_constraintStart_toStartOf="@+id/humidity_icon"
                        app:layout_constraintTop_toBottomOf="@+id/humidity_icon" />

                    <TextView
                        android:id="@+id/humidity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/humidity_label"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/humidity_tv"
                        app:layout_constraintStart_toStartOf="@+id/humidity_tv"
                        app:layout_constraintTop_toBottomOf="@+id/humidity_tv" />

                    <ImageView
                        android:id="@+id/wind_icon"
                        android:layout_width="59dp"
                        android:layout_height="46dp"
                        android:layout_marginStart="100dp"
                        android:src="@drawable/wind2"
                        app:layout_constraintStart_toEndOf="@+id/humidity_icon"
                        app:layout_constraintTop_toTopOf="@+id/humidity_icon" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="9Km/h"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/wind_icon"
                        app:layout_constraintStart_toStartOf="@+id/wind_icon"
                        app:layout_constraintTop_toBottomOf="@+id/wind_icon" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/wind_label"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textView10"
                        app:layout_constraintStart_toStartOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <ImageView
                        android:id="@+id/cloud_icon"
                        android:layout_width="59dp"
                        android:layout_height="46dp"
                        android:layout_marginTop="52dp"
                        android:src="@drawable/clouds2"
                        app:layout_constraintEnd_toEndOf="@+id/humidity_icon"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/humidity_icon"
                        app:layout_constraintTop_toBottomOf="@+id/humidity_label" />

                    <TextView
                        android:id="@+id/cloud_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="100%"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/cloud_icon"
                        app:layout_constraintStart_toStartOf="@+id/cloud_icon"
                        app:layout_constraintTop_toBottomOf="@+id/cloud_icon" />

                    <TextView
                        android:id="@+id/cloud_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/cloud_label"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/cloud_tv"
                        app:layout_constraintStart_toStartOf="@+id/cloud_tv"
                        app:layout_constraintTop_toBottomOf="@+id/cloud_tv" />

                    <ImageView
                        android:id="@+id/pressure_icon"
                        android:layout_width="85dp"
                        android:layout_height="71dp"
                        android:layout_marginStart="100dp"
                        android:src="@drawable/pressure2"
                        app:layout_constraintBottom_toBottomOf="@+id/cloud_icon"
                        app:layout_constraintStart_toEndOf="@+id/cloud_icon"
                        app:layout_constraintTop_toTopOf="@+id/cloud_icon" />

                    <TextView
                        android:id="@+id/pressure_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="1005mbar"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/pressure_icon"
                        app:layout_constraintStart_toStartOf="@+id/pressure_icon"
                        app:layout_constraintTop_toBottomOf="@+id/pressure_icon" />

                    <TextView
                        android:id="@+id/pressure_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/pressure_label"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/pressure_tv"
                        app:layout_constraintStart_toStartOf="@+id/pressure_tv"
                        app:layout_constraintTop_toBottomOf="@+id/pressure_tv" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>